# ClaudePM

./: .gitignore  CLAUDE.md  PRD.md  README.md  package-lock.json
.claude/: settings.local.json
apps/desktop/: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  router.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/ios/: CLAUDE.md
apps/ios/ClaudePM/: Info.plist
apps/ios/ClaudePM.xcodeproj/: project.pbxproj
apps/ios/ClaudePMTests/: ClaudePMTests.swift
apps/macos-notch/: CLAUDE.md
apps/macos-notch/NotchCenter/: Info.plist
apps/macos-notch/NotchCenter.xcodeproj/: project.pbxproj
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
docs/: api-reference.md  claude-code-hooks-setup.md
scripts/: com.claudepm.server.plist  launchd-install.sh  launchd-uninstall.sh
server/: .env.example  .gitignore  CLAUDE.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/prisma/: schema.prisma
server/src/: index.ts
server/src/api/: adhoc-tickets-schemas.ts  adhoc-tickets.ts  devices.ts  docs.ts  git.ts  health.ts  hooks.ts  notifications.ts  projects-schemas.ts  projects.ts  sessions-schemas.ts  sessions.ts  tickets-schemas.ts  tickets.ts  tmux.ts
server/src/config/: db.ts  env.ts
server/src/middleware/: api-key-auth.ts
(+219 files in other folders)
