[package]
name = "claude-pm-desktop"
version = "0.1.0"
description = "Claude PM Desktop Application"
authors = ["Claude PM"]
edition = "2021"

[lib]
name = "claude_pm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.1"
